--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -7,8 +7,7 @@ body {
   width: 100vw;
   font-size: 1.25rem;
   line-height: 1.6;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+  font-family: "Noto Sans", sans-serif;
   font-weight: bolder;
 
   color: #2f3c7e;
