--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -17,8 +17,28 @@ body {
 
 #nav-bar {
   width: 100%;
-  z-index: 100;
-  /* background: #f1f1f1; */
+  z-index: 9999;
+  border: 0;
+  font-size: 1.25rem !important;
+  line-height: 1.42857143 !important;
+  letter-spacing: 4px;
+  border-radius: 0;
+}
+
+.navbar li a,
+.navbar .navbar-brand {
+  color: #2f3c7e !important;
+}
+
+.navbar-nav li a:hover,
+.navbar-nav li.active a {
+  color: red !important;
+  background-color: #f1f1f1 !important;
+}
+
+.navbar-default .navbar-toggle {
+  border-color: transparent;
+  color: #f1f1f1 !important;
 }
 
 .padR {
@@ -35,14 +55,8 @@ body {
   margin-right: 0.5rem;
 }
 
-#hStyle {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.75)),
-    url("https://images.unsplash.com/photo-1603398938378-e54eab446dde?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80")
-      no-repeat center;
-  background-size: cover;
-  color: #f1f1f1;
-}
-
 #_aMe {
   text-align: center;
+  background: #f1f1f1;
+  border: none;
 }
